changes to test.js, database models, routes, forms

--- a/UWI-Vet-WebApp/app/flaskblog/templates/evaluate.html
+++ b/UWI-Vet-WebApp/app/flaskblog/templates/evaluate.html
@@ -44,7 +44,7 @@
             <table id="data" class="table table-striped table-hover">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Student ID</th><th>Competency</th><th>Mark</th><th>Update</th>
+                        <th>Student ID</th><th>Rotation</th><th>Competency</th><th>Mark</th><th>Update</th>
                     </tr>
                 </thead>
             </table>
