--- a/UWI-Vet-WebApp/app/flaskblog/templates/students.html
+++ b/UWI-Vet-WebApp/app/flaskblog/templates/students.html
@@ -164,7 +164,7 @@
                                 <tbody>
                                     {% for val in Student %}
                                     <tr>
-                                        <td>{{val.id}}</td>
+                                        <td>{{val.studentid}}</td>
                                         <td>{{val.name}}</td>
                                         <td>{{val.date_enrolled}}</td>
                                         <td>{{val.email}}</td>
