--- a/UWI-Vet-WebApp/app/flaskblog/templates/usersreg.html
+++ b/UWI-Vet-WebApp/app/flaskblog/templates/usersreg.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 {% block content%}
-    <h1>Registered Clinicians</h1>
+    <h1>Registered Users</h1>
     <div class="row">
         <div class="col">
             <table class="table table-striped table-hover">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Clincian ID</th><th>Clinician Name</th><th>Email</th><th>Rotation</th><th></th>
+                        <th>User ID</th><th>User Name</th><th>Email</th><th>Rotations</th><th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -15,7 +15,12 @@
                         <td>{{val.id}}</td>
                         <td>{{val.username}}</td>
                         <td>{{val.email}}</td>
-                        <td>{{val.rotation}}</td>
+                        <td>{{val.rotation1}}
+                            </br>
+                            {% if val.rotation2 != "None" %}
+                                {{val.rotation2}}
+                            {% endif %}
+                        </td>
                         <td>
                             {% if current_user.id != val.id %}
                                 <form action="{{ url_for('delete_user', user_id=val.id)}}" method="POST">
