--- a/UWI-Vet-WebApp/app/flaskblog/templates/account.html
+++ b/UWI-Vet-WebApp/app/flaskblog/templates/account.html
@@ -4,7 +4,7 @@
       <div class="media">
           <img class="rounded-circle account-img" src="{{ image_file }}">
           <div class="media-body">
-              <h2 class="account-heading">{{ current_user.username }}</h2>
+              <h2 class="account-heading">Welcome {{ current_user.username }}</h2>
           </div>
       </div>
     </div>
@@ -12,8 +12,8 @@
           <div class="col-md-10">
             <p>
               {% if current_user.level == 1 %}
-                <a href="{{ url_for('competancy') }}" class="btn btn-sq-lg btn-primary">
-                    <i class="fa fa-list fa-5x"></i><br/>
+                <a href="{{ url_for('managerusers') }}" class="btn btn-sq-lg btn-primary">
+                    <i class="fa fa-users fa-5x"></i><br/>
                     Manage <br/>User Accounts
                 </a>
               {% endif %}
@@ -25,19 +25,19 @@
               {% endif %}
               {% if current_user.level == 1 or current_user.level == 2 %}
                 <a href="{{ url_for('evaluate') }}" class="btn btn-sq-lg btn-info">
-                  <i class="fa fa-star fa-5x"></i><br/>
+                  <i class="fa fa-pencil fa-5x"></i><br/>
                   Evaluate Students
                 </a>
               {% endif %}
               {% if current_user.level == 1 or current_user.level == 2 %}
                 <a href="{{ url_for('students') }}" class="btn btn-sq-lg btn-warning">
-                  <i class="fa fa-user fa-5x"></i><br/>
+                  <i class="fa fa-book fa-5x"></i><br/>
                   View/Add <br/>Students
                 </a>
               {% endif %}
               {% if current_user.level == 1 or current_user.level == 2 %}
                 <a href="{{ url_for('reports') }}" class="btn btn-sq-lg btn-danger">
-                  <i class="fa fa-gear fa-5x"></i><br/>
+                  <i class="fa fa-bullhorn fa-5x"></i><br/>
                   Reports
                 </a>
               {% endif %}
