--- a/UWI-Vet-WebApp/app/flaskblog/templates/home.html
+++ b/UWI-Vet-WebApp/app/flaskblog/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content%}
+    {% if current_user.is_authenticated %}
         {% for post in posts.items %}
             <article class="media content-section">
                 
@@ -26,4 +27,18 @@
                 ...
             {% endif %}
         {% endfor %}
+    {% else %}
+    <div class="text-center">
+        <img src="/static/profilepics/UWI.png" class="rounded" alt="UWI VET APP">
+    </div>
+    <div class="text-center">
+        <h1>
+            Welcome to the UWI Veternary School Web Application 
+        </h1>
+        </br>
+        <a class="text-center" href="{{ url_for('login') }}">Please click here to login</a>
+        </div>
+    </div>
+
+    {% endif %}    
 {% endblock content %}
