--- a/UWI-Vet-WebApp/app/flaskblog/templates/reports.html
+++ b/UWI-Vet-WebApp/app/flaskblog/templates/reports.html
@@ -9,22 +9,9 @@
       <i class="fa fa-cloud-download fa-5x"></i><br/>
       Export <br/>Student Data
     </a>
-    <!-- <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Competency Report</th>
-                <th scope="col">Clincian Report</th>
-                <th scope="col">Student Report</th>
-                <th scope="col">Full Activity Report</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row"><button href="#">Run</button></th>
-                <td><button href="#">Run</button></td>
-                <td><button href="#">Run</button></td>
-                <td><a href="{{ url_for('activity') }}">Run</a></td>
-              </tr>
-            </tbody>
-    </table> -->
+    <a href="{{ url_for('utilization') }}" class="btn btn-sq-lg btn-danger">
+      <i class="fa fa-clock-o fa-5x"></i><br/>
+      Utilization <br/>Report
+    </a>
+    
 {% endblock content %}
