--- a/UWI-Vet-WebApp/app/flaskblog/templates/evaluate.html
+++ b/UWI-Vet-WebApp/app/flaskblog/templates/evaluate.html
@@ -2,33 +2,107 @@
 {% block content%}
     <h1>Evaluation Page</h1>
     
-
-   <!-- <form id="search">
-        <input type="text" id="studentid" msgbox="Student ID">
-        <input type="button" value="Search" onclick="get_student()">
-    </form> -->
-    <form id="search" method="POST" action="">
-        {{ form.hidden_tag() }}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Enter Student ID</legend> 
-            <div class="form-group">
-                {{ form.studentid.label(class="form-control-label") }}
-                {% if form.studentid.errors %}
-                    {{ form.studentid(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback"> 
-                        {% for errors in form.studentid.errors %}
-                            <span>{{ errors }}</span>
-                        {% endfor %}
+    <div class="content section">
+            <div class="accordion" id="accordionExample">
+                    
+                <div class="card">
+                    <div class="card-header" id="heading11">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse11" aria-expanded="true" aria-controls="collapse11">
+                            Search By Student ID
+                        </button>
+                    </h5>
                     </div>
-                {% else %}
-                    {{ form.studentid(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-        </fieldset>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info") }}
-        </div>
-    </form>
+        
+                    <div id="collapse11" class="collapse" aria-labelledby="heading11" data-parent="#accordionExample">
+                        <div class="card-body">
+                            <form id="search" method="POST" action="">
+                                {{ form.hidden_tag() }}
+                                <fieldset class="form-group">
+                                    <legend class="border-bottom mb-4">Enter Student ID</legend> 
+                                    <div class="form-group">
+                                        {{ form.studentid.label(class="form-control-label") }}
+                                        {% if form.studentid.errors %}
+                                            {{ form.studentid(class="form-control form-control-lg is-invalid") }}
+                                            <div class="invalid-feedback"> 
+                                                {% for errors in form.studentid.errors %}
+                                                    <span>{{ errors }}</span>
+                                                {% endfor %}
+                                            </div>
+                                        {% else %}
+                                            {{ form.studentid(class="form-control form-control-lg") }}
+                                        {% endif %}
+                                    </div>
+                                </fieldset>
+                                <div class="form-group">
+                                    {{ form.submit(class="btn btn-outline-info") }}
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="heading11">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse12" aria-expanded="true" aria-controls="collapse12">
+                            Search By Student Name
+                        </button>
+                    </h5>
+                    </div>
+                    <div id="collapse12" class="collapse" aria-labelledby="heading11" data-parent="#accordionExample">
+                            <div class="card-body">
+                                <form id="search" method="POST" action="">
+                                    {{ form2.hidden_tag() }}
+                                    <fieldset class="form-group">
+                                        <legend class="border-bottom mb-4">Enter Student Name</legend> 
+                                        <div class="form-group">
+                                            {{ form2.name.label(class="form-control-label") }}
+                                            {% if form2.name.errors %}
+                                                {{ form2.name(class="form-control form-control-lg is-invalid") }}
+                                                <div class="invalid-feedback"> 
+                                                    {% for errors in form2.name.errors %}
+                                                        <span>{{ errors }}</span>
+                                                    {% endfor %}
+                                                </div>
+                                            {% else %}
+                                                {{ form2.name(class="form-control form-control-lg") }}
+                                            {% endif %}
+                                        </div>
+                                    </fieldset>
+                                    <div class="form-group">
+                                        {{ form2.submit(class="btn btn-outline-info") }}
+                                    </div>
+                                </form>
+                            </div>
+                    </div>
+                </div>    
+            </div>       
+                    {% if students %}
+                    <div class="content-section">
+                        <h2>Student Table</h2>
+                        <div class="row">
+                            <div class="col">
+                                <table class="table table-striped table-hover">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Student ID</th><th>Student Name</th><th>Date Enrolled</th><th>Email</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for val in students %}
+                                        <tr>
+                                            <td><a href="{{ url_for('comp_rec2', student_id=val.studentid) }}">{{val.studentid}}</a></td>
+                                            <td>{{val.name}}</td>
+                                            <td>{{val.date_enrolled}}</td>
+                                            <td>{{val.email}}</td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    {% endif %}
 
     <br>
     {%  if student %}
@@ -56,16 +130,16 @@
                 </tr>  
                 </thead> 
             </table>
-           
+        
         </div>
     </div>
     {% endif %}
     <br>
+    
 
+    {% if records %}
     <div class="content section">
        
-            
-
                 <div class="accordion" id="accordionExample">
                         
                                
@@ -534,7 +608,7 @@
                     {% endif %}
                 </div>
 
-            
+        {% endif %}
     </div>
 
     
