--- a/UWI-Vet-WebApp/app/flaskblog/templates/students.html
+++ b/UWI-Vet-WebApp/app/flaskblog/templates/students.html
@@ -40,7 +40,7 @@
                     <div class="content-section">
                         <h2>Search Student by ID</h2>
                         <form id="search">
-                            <input type="text" id="studentid" msgbox="Student ID">
+                            <input type="text" id="name" msgbox="Student ID">
                             <input type="button" value="Search" onclick="get_student()">
                         </form>
 
@@ -74,72 +74,7 @@
                 </div>
              </div>
         </div>
-        <div class="card">
-            <div class="card-header" id="headingThree">
-                <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Search By Name
-                    </button>
-                </h5>
-            </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-            <div class="card-body">
-                
-
-                <br>
-
-                <div class="content section">
-                    <div id="studentinfo">
-                        <table class="table table-bordered table-condensed">
-                            <thead>
-                            <tr>
-                                <th>ID</th>
-                                <td id="ID"></td>
-                            </tr>   
-                            <tr>
-                                <th>Name</th>
-                                <td id="Name"></td>
-                            </tr>
-                            <tr>
-                                <th>Email</th>
-                                <td id="Email"></td>
-                            </tr>
-                            <tr>
-                                <th>Year Enrolled</th>
-                                <td id="Date_enrolled"></td>
-                            </tr>  
-                            </thead> 
-                        </table>
-                    </div>
-                </div>
-                    </form>
-                    <div class="content-section">
-                        <h2>Student Table</h2>
-                        <div class="row">
-                            <div class="col">
-                                <table class="table table-striped table-hover">
-                                    <thead class="thead-dark">
-                                        <tr>
-                                            <th>Student ID</th><th>Student Name</th><th>Date Enrolled</th><th>Email</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for val in record %}
-                                        <tr>
-                                            <td>{{val.id}}</td>
-                                            <td>{{val.name}}</td>
-                                            <td>{{val.date_enrolled}}</td>
-                                            <td>{{val.email}}</td>
-                                        </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-       </div>
+        
        <div class="card">
             <div class="card-header" id="headingFour">
                 <h5 class="mb-0">
